--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.16.11",
     "@mui/material": "^5.16.11",
+    "dotenv": "^16.4.7",
     "next": "15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
