--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.16.11",
     "@mui/material": "^5.16.11",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "next": "15.1.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
