--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.11",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
